--- a/training.ipynb
+++ b/training.ipynb
@@ -12,29 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of parameters in network: 105.6k\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_forecasting/data/encoders.py:524: UserWarning: scale is below 1e-7 - consider not centering the data or using data with higher variance for numerical stability\n",
-      "  warnings.warn(\n",
-      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/parsing.py:262: UserWarning: Attribute 'loss' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['loss'])`.\n",
-      "  rank_zero_warn(\n",
-      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/parsing.py:262: UserWarning: Attribute 'logging_metrics' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['logging_metrics'])`.\n",
-      "  rank_zero_warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning.callbacks import EarlyStopping, LearningRateMonitor\n",
@@ -53,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -89,9 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/parsing.py:262: UserWarning: Attribute 'loss' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['loss'])`.\n",
+      "  rank_zero_warn(\n",
+      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/parsing.py:262: UserWarning: Attribute 'logging_metrics' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['logging_metrics'])`.\n",
+      "  rank_zero_warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the model\n",
     "savedTft = TemporalFusionTransformer.load_from_checkpoint('./lightning_logs/version_36/checkpoints/epoch=20-step=630.ckpt')"
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43c9d1438f2044998739f7fc2e48f009",
+       "model_id": "8d8b8f190c51467383215f89a11ad923",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "915633444b0c4d37ba6785f7ff725e6c",
+       "model_id": "b3dbacfd57ea40cca67980fae727b2cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,33 +170,51 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n",
-      "[E thread_pool.cpp:113] Exception in thread pool task: mutex lock failed: Invalid argument\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+      "Traceback (most recent call last):\n",
+      "  File \"<string>\", line 1, in <module>\n",
+      "  File \"/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/multiprocessing/spawn.py\", line 116, in spawn_main\n",
+      "    exitcode = _main(fd, parent_sentinel)\n",
+      "  File \"/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/multiprocessing/spawn.py\", line 126, in _main\n",
+      "    self = reduction.pickle.load(from_parent)\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_forecasting/__init__.py\", line 4, in <module>\n",
+      "    from pytorch_forecasting.data import (\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_forecasting/data/__init__.py\", line 7, in <module>\n",
+      "    from pytorch_forecasting.data.encoders import (\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_forecasting/data/encoders.py\", line 24, in <module>\n",
+      "    from pytorch_forecasting.utils import InitialParameterRepresenterMixIn\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_forecasting/utils.py\", line 10, in <module>\n",
+      "    import pytorch_lightning as pl\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/__init__.py\", line 35, in <module>\n",
+      "    from pytorch_lightning.callbacks import Callback  # noqa: E402\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/callbacks/__init__.py\", line 14, in <module>\n",
+      "    from pytorch_lightning.callbacks.batch_size_finder import BatchSizeFinder\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/callbacks/batch_size_finder.py\", line 24, in <module>\n",
+      "    from pytorch_lightning.callbacks.callback import Callback\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/callbacks/callback.py\", line 25, in <module>\n",
+      "    from pytorch_lightning.utilities.types import STEP_OUTPUT\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/__init__.py\", line 23, in <module>\n",
+      "    from pytorch_lightning.utilities.imports import (  # noqa: F401\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/imports.py\", line 32, in <module>\n",
+      "    _POPTORCH_AVAILABLE = package_available(\"poptorch\")\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/lightning_utilities/core/imports.py\", line 34, in package_available\n",
+      "    return find_spec(package_name) is not None\n",
+      "  File \"/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/importlib/util.py\", line 103, in find_spec\n",
+      "    return _find_spec(fullname, parent_path)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 925, in _find_spec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 1414, in find_spec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 1386, in _get_spec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 1513, in find_spec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 142, in _path_stat\n",
+      "KeyboardInterrupt\n",
+      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x12605d9d0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/torch/utils/data/dataloader.py\", line 1466, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/Users/deividas/Library/Python/3.9/lib/python/site-packages/torch/utils/data/dataloader.py\", line 1424, in _shutdown_workers\n",
+      "    if self._persistent_workers or self._workers_status[worker_id]:\n",
+      "AttributeError: '_MultiProcessingDataLoaderIter' object has no attribute '_workers_status'\n"
      ]
     }
    ],
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
