--- a/training_preprocessing.ipynb
+++ b/training_preprocessing.ipynb
@@ -10,42 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "# Load from s3 instead?\n",
-    "df = pd.read_csv('.././Data/xMonths_SimulatedStaff.csv')\n",
+    "df = pd.read_csv('./Data/xMonths_SimulatedStaff.csv')\n",
     "#../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# No missing dates so we're just setting the time_idx equal to index. Should probably add some mathematical func here\n",
-    "# used to determine the sequence of samples.\n",
-    "# If no missing observations, the time index should increase by +1 for each subsequent sample. \n",
-    "df[\"time_idx\"] = df.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +31,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#TODO!\n",
+    "\n",
+    "# No missing dates so we're just setting the time_idx equal to index. Should probably add some mathematical func here\n",
+    "# used to determine the sequence of samples.\n",
+    "# If no missing observations, the time index should increase by +1 for each subsequent sample. \n",
+    "\n",
+    "\n",
+    "#startOfData = dateTime[0]\n",
+    "\n",
+    "# given that each sample is 9 hours, calculate how long it has been since the first sample\n",
+    "# i.e.\n",
+    "# 31/05/2021 17:00\t= 0\n",
+    "# 31/05/2021 18:00\t= 1\n",
+    "# 01/06/2021 10:00\t= 2\n",
+    "# 01/06/2021 11:00\t= 3\n",
+    "\n",
+    "\n",
+    "# get the total seconds of dateTime\n",
+    "\n",
+    "\n",
+    "\n",
+    "#time_elapsed = dateTime. - startOfData\n",
+    "#hours_elapsed = time_elapsed.total_seconds() / 3600\n",
+    "#intervals_elapsed = hours_elapsed / 9\n",
+    "\n",
+    "#df[\"time_idx\"] = intervals_elapsed\n",
+    "\n",
+    "# Convert time elapsed to a duration object in hours\n",
+    "\n",
+    "# Calculate the number of 9-hour intervals\n",
+    "\n",
+    "\n",
+    "#print(f\"First date: {startOfData}\")\n",
+    "#df[\"time_idx\"].head(15)\n",
+    "\n",
+    "# Print the rows where time_idx does not increase by 1\n",
+    "#df[df[\"time_idx\"] != df[\"time_idx\"].shift(1) + 1]\n",
+    "#df.head(1)\n",
+    "#df[133:137]\n",
+    "df[\"time_idx\"] = df.index\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,302 +89,18 @@
     "df[\"constant_group\"] = \"group_1\"\n",
     "\n",
     "#Change column value to all be floats\n",
-    "df['transaction_count'] = df['transaction_count'].astype(float)"
+    "#df['transaction_count'] = df['transaction_count'].astype(float)\n",
+    "df['transaction_count'] = df['transaction_count'].astype(int)\n",
+    "\n",
+    "# remove subtotal column, we're not using it\n",
+    "df = df.drop(columns=['subtotal'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>subtotal</th>\n",
-       "      <th>transaction_count</th>\n",
-       "      <th>rain</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>holiday</th>\n",
-       "      <th>oil_price</th>\n",
-       "      <th>workforce_type_1</th>\n",
-       "      <th>workforce_type_2</th>\n",
-       "      <th>workforce_type_3</th>\n",
-       "      <th>workforce_type_4</th>\n",
-       "      <th>time_idx</th>\n",
-       "      <th>constant_group</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>hour</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>17/05/2021 10:00</td>\n",
-       "      <td>428.03</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.7</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>17/05/2021 11:00</td>\n",
-       "      <td>324.78</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.4</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17/05/2021 12:00</td>\n",
-       "      <td>279.75</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17/05/2021 13:00</td>\n",
-       "      <td>1630.59</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17/05/2021 14:00</td>\n",
-       "      <td>1166.10</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15.9</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>17/05/2021 15:00</td>\n",
-       "      <td>990.40</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>17/05/2021 16:00</td>\n",
-       "      <td>613.87</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>17/05/2021 17:00</td>\n",
-       "      <td>533.75</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>17/05/2021 18:00</td>\n",
-       "      <td>33.95</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>18/05/2021 10:00</td>\n",
-       "      <td>433.96</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>69.01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>group_1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Timestamp  subtotal  transaction_count  rain  temperature  holiday  \\\n",
-       "0  17/05/2021 10:00    428.03               11.0   0.0         12.7    False   \n",
-       "1  17/05/2021 11:00    324.78               15.0   0.0         13.4    False   \n",
-       "2  17/05/2021 12:00    279.75               12.0   0.0         13.6    False   \n",
-       "3  17/05/2021 13:00   1630.59               29.0   0.0         14.1    False   \n",
-       "4  17/05/2021 14:00   1166.10               18.0   0.0         15.9    False   \n",
-       "5  17/05/2021 15:00    990.40               13.0   0.0         13.9    False   \n",
-       "6  17/05/2021 16:00    613.87               12.0   1.2          9.8    False   \n",
-       "7  17/05/2021 17:00    533.75               11.0   0.0         11.2    False   \n",
-       "8  17/05/2021 18:00     33.95                2.0   0.1         12.0    False   \n",
-       "9  18/05/2021 10:00    433.96               15.0   0.0         13.2    False   \n",
-       "\n",
-       "   oil_price  workforce_type_1  workforce_type_2  workforce_type_3  \\\n",
-       "0      69.62                 1                 2                 3   \n",
-       "1      69.62                 1                 2                 3   \n",
-       "2      69.62                 1                 2                 3   \n",
-       "3      69.62                 1                 2                 3   \n",
-       "4      69.62                 1                 2                 3   \n",
-       "5      69.62                 1                 2                 3   \n",
-       "6      69.62                 1                 2                 3   \n",
-       "7      69.62                 1                 2                 3   \n",
-       "8      69.62                 1                 2                 3   \n",
-       "9      69.01                 1                 2                 3   \n",
-       "\n",
-       "   workforce_type_4  time_idx constant_group  year  month  day  hour  \n",
-       "0                 0         0        group_1  2021      5   17    10  \n",
-       "1                 1         1        group_1  2021      5   17    11  \n",
-       "2                 1         2        group_1  2021      5   17    12  \n",
-       "3                 1         3        group_1  2021      5   17    13  \n",
-       "4                 1         4        group_1  2021      5   17    14  \n",
-       "5                 1         5        group_1  2021      5   17    15  \n",
-       "6                 1         6        group_1  2021      5   17    16  \n",
-       "7                 0         7        group_1  2021      5   17    17  \n",
-       "8                 0         8        group_1  2021      5   17    18  \n",
-       "9                 0         9        group_1  2021      5   18    10  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add year, month, day, and hour columns\n",
     "df[\"year\"] = dateTime.year\n",
@@ -365,20 +108,25 @@
     "df[\"day\"] = dateTime.day\n",
     "df[\"hour\"] = dateTime.hour\n",
     "\n",
-    "df.head(10)"
+    "#df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert column workforce_type_1 to float\n",
-    "df['workforce_type_1'] = df['workforce_type_1'].astype(float)\n",
-    "df['workforce_type_2'] = df['workforce_type_2'].astype(float)\n",
-    "df['workforce_type_3'] = df['workforce_type_3'].astype(float)\n",
-    "df['workforce_type_4'] = df['workforce_type_4'].astype(float)"
+    "#df['workforce_type_1'] = df['workforce_type_1'].astype(float)\n",
+    "#df['workforce_type_2'] = df['workforce_type_2'].astype(float)\n",
+    "#df['workforce_type_3'] = df['workforce_type_3'].astype(float)\n",
+    "#df['workforce_type_4'] = df['workforce_type_4'].astype(float)\n",
+    "\n",
+    "df['workforce_type_1'] = df['workforce_type_1'].astype(int)\n",
+    "df['workforce_type_2'] = df['workforce_type_2'].astype(int)\n",
+    "df['workforce_type_3'] = df['workforce_type_3'].astype(int)\n",
+    "df['workforce_type_4'] = df['workforce_type_4'].astype(int)"
    ]
   },
   {
@@ -397,9 +145,9 @@
    "outputs": [],
    "source": [
     "# convert constant_group to numerical value\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
-    "df['holiday'] = le.fit_transform(df['holiday'])"
+    "#le = preprocessing.LabelEncoder()\n",
+    "#df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
+    "#df['holiday'] = le.fit_transform(df['holiday'])"
    ]
   },
   {
