Adds eval metrics to tft

--- a/training_preprocessing.ipynb
+++ b/training_preprocessing.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert column workforce_type_1 to float\n",
-    "#df['workforce_type_1'] = df['workforce_type_1'].astype(float)\n",
-    "#df['workforce_type_2'] = df['workforce_type_2'].astype(float)\n",
-    "#df['workforce_type_3'] = df['workforce_type_3'].astype(float)\n",
-    "#df['workforce_type_4'] = df['workforce_type_4'].astype(float)\n",
-    "\n",
     "df['workforce_type_1'] = df['workforce_type_1'].astype(int)\n",
     "df['workforce_type_2'] = df['workforce_type_2'].astype(int)\n",
     "df['workforce_type_3'] = df['workforce_type_3'].astype(int)\n",
@@ -144,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert constant_group to numerical value\n",
+    "# convert constant_group to numerical value, not used by tft\n",
     "#le = preprocessing.LabelEncoder()\n",
     "#df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
     "#df['holiday'] = le.fit_transform(df['holiday'])"
