--- a/OtherModels/model-trainer.ipynb
+++ b/OtherModels/model-trainer.ipynb
@@ -5,9 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Regression NN\n",
-    "To Try:\n",
-    "- Convert employee demand to integers instead"
+    "# Simple Regression NN"
    ]
   },
   {
@@ -704,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
