--- a/OtherModels/model-trainer.ipynb
+++ b/OtherModels/model-trainer.ipynb
@@ -23,7 +23,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
-    "from TestTrainData import TrainData, TestData\n",
+    "from testTrainData import TrainData, TestData\n",
     "\n",
     "import sys"
    ]
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "# Model imports\n",
-    "from MultiLabelRegression import MultiLabelRegression\n",
-    "from MultiLayerMultiLabelRegression import MultiLayerMultiLabelRegression"
+    "from multiLabelRegression import MultiLabelRegression\n",
+    "from multiLayerMultiLabelRegression import MultiLayerMultiLabelRegression"
    ]
   },
   {
@@ -677,13 +677,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
