--- a/tft_training.ipynb
+++ b/tft_training.ipynb
@@ -1,20 +1,38 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ML project\n",
-    "TODO:\n",
-    "- More sophisticated graphs\n",
-    "- Test against other models"
+    "# ML project"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of parameters in network: 103.2k\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_forecasting/data/encoders.py:524: UserWarning: scale is below 1e-7 - consider not centering the data or using data with higher variance for numerical stability\n",
+      "  warnings.warn(\n",
+      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/parsing.py:262: UserWarning: Attribute 'loss' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['loss'])`.\n",
+      "  rank_zero_warn(\n",
+      "/Users/deividas/Library/Python/3.9/lib/python/site-packages/pytorch_lightning/utilities/parsing.py:262: UserWarning: Attribute 'logging_metrics' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['logging_metrics'])`.\n",
+      "  rank_zero_warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pytorch_lightning as pl\n",
     "import numpy as np\n",
@@ -24,7 +42,7 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
     "\n",
-    "from model_architecture import tft, training, val_dataloader, train_dataloader, validation\n",
+    "from tft_architecture import tft, training, val_dataloader, train_dataloader, validation\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
