--- a/Baselines.ipynb
+++ b/Baselines.ipynb
@@ -22,7 +22,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import torch\n",
     "from pytorch_forecasting import Baseline, TemporalFusionTransformer, TimeSeriesDataSet\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.utils.data import Dataset\n",
@@ -59,7 +58,7 @@
     }
    ],
    "source": [
-    "from model_architecture import tft, training, val_dataloader, train_dataloader, validation, training\n",
+    "from tft_architecture import training,training\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error"
    ]
   },
