--- a/OtherModels/model-trainer.ipynb
+++ b/OtherModels/model-trainer.ipynb
@@ -14,6 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -25,18 +27,11 @@
     "\n",
     "from testTrainData import TrainData, TestData\n",
     "\n",
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from ipynb.fs.full.training_preprocessing import GetDataset\n",
+    "\n",
     "# Model imports\n",
     "from multiLabelRegression import MultiLabelRegression\n",
-    "from multiLayerMultiLabelRegression import MultiLayerMultiLabelRegression"
+    "from multiLayerMultiLabelRegression import MultiLayerMultiLabelRegression\n"
    ]
   },
   {
@@ -51,21 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipynb.fs.full.training_preprocessing import GetDataset"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = GetDataset()\n",
-    "#df"
+    "df = GetDataset()"
    ]
   },
   {
