--- a/training_preprocessing.ipynb
+++ b/training_preprocessing.ipynb
@@ -10,19 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from sklearn import preprocessing\n",
+    "\n",
     "# Load from s3 instead?\n",
-    "df = pd.read_csv('./Data/xMonths_SimulatedStaff.csv')\n",
+    "df = pd.read_csv('.././Data/xMonths_SimulatedStaff.csv')\n",
     "#../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +77,12 @@
     "#df[df[\"time_idx\"] != df[\"time_idx\"].shift(1) + 1]\n",
     "#df.head(1)\n",
     "#df[133:137]\n",
-    "df[\"time_idx\"] = df.index\n",
-    "\n"
+    "df[\"time_idx\"] = df.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +90,12 @@
     "df[\"constant_group\"] = \"group_1\"\n",
     "\n",
     "#Change column value to all be floats\n",
-    "#df['transaction_count'] = df['transaction_count'].astype(float)\n",
-    "df['transaction_count'] = df['transaction_count'].astype(int)\n",
-    "\n",
-    "# remove subtotal column, we're not using it\n",
-    "df = df.drop(columns=['subtotal'])"
+    "df['transaction_count'] = df['transaction_count'].astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert column workforce_type_1 to float\n",
-    "df['workforce_type_1'] = df['workforce_type_1'].astype(int)\n",
-    "df['workforce_type_2'] = df['workforce_type_2'].astype(int)\n",
-    "df['workforce_type_3'] = df['workforce_type_3'].astype(int)\n",
-    "df['workforce_type_4'] = df['workforce_type_4'].astype(int)"
+    "df['workforce_type_1'] = df['workforce_type_1'].astype(float)\n",
+    "df['workforce_type_2'] = df['workforce_type_2'].astype(float)\n",
+    "df['workforce_type_3'] = df['workforce_type_3'].astype(float)\n",
+    "df['workforce_type_4'] = df['workforce_type_4'].astype(float)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,19 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert constant_group to numerical value, not used by tft\n",
-    "#le = preprocessing.LabelEncoder()\n",
-    "#df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
-    "#df['holiday'] = le.fit_transform(df['holiday'])"
+    "le = preprocessing.LabelEncoder()\n",
+    "df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
+    "df['holiday'] = le.fit_transform(df['holiday'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +444,7 @@
        "[5067 rows x 16 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
