--- a/training_preprocessing.ipynb
+++ b/training_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
     "from sklearn import preprocessing\n",
     "\n",
     "# Load from s3 instead?\n",
-    "df = pd.read_csv('.././Data/xMonths_SimulatedStaff.csv')\n",
+    "df = pd.read_csv('./Data/xMonths_SimulatedStaff.csv')\n",
     "#../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,19 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert constant_group to numerical value, not used by tft\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
-    "df['holiday'] = le.fit_transform(df['holiday'])"
+    "#le = preprocessing.LabelEncoder()\n",
+    "#df['constant_group'] = le.fit_transform(df['constant_group']) #Uncomment for other models!\n",
+    "#df['holiday'] = le.fit_transform(df['holiday'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "[5067 rows x 16 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
